--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,36 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: hsl(175, 22%, 10%);
+  --foreground: hsl(168, 3%, 63%);
+
+  --primary-100: hsl(176, 56%, 92%);
+  --primary-200: hsl(176, 56%, 83%);
+  --primary-300: hsl(176, 56%, 73%);
+  --primary-400: hsl(176, 56%, 64%);
+  --primary-500: hsl(176, 56%, 55%);
+  --primary-600: hsl(176, 56%, 45%);
+  --primary-700: hsl(176, 56%, 35%);
+  --primary-800: hsl(176, 56%, 25%);
+  --primary-foreground: hsl(175, 32%, 15%);
+ 
+  
+  --secondary-100: hsl(177, 21%, 80%);
+  --secondary-200: hsl(177, 21%, 65%);
+  --secondary-300: hsl(177, 21%, 51%);
+  --secondary-400: hsl(177, 21%, 39%);
+  --secondary-500: hsl(177, 21%, 29%);
+  --secondary-600: hsl(177, 21%, 21%); 
+  --secondary-700: hsl(177, 21%, 16%);
+  --secondary-800: hsl(177, 21%, 10%);
+  --secondary-foreground: hsl(0, 0%, 100%);
 }
+
+.dark {
+  
+}
+
+
 
 @theme inline {
   --color-background: var(--background);
@@ -12,11 +39,32 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@theme {
+  --color-primary-100: var(--primary-100);
+  --color-primary-200: var(--primary-200);
+  --color-primary-300: var(--primary-300);
+  --color-primary-400: var(--primary-400);
+  --color-primary-500: var(--primary-500);
+  --color-primary-600: var(--primary-600);
+  --color-primary-700: var(--primary-700);
+  --color-primary-800: var(--primary-800);
+
+  --color-primary-foreground: var(--primary-foreground); 
+
+  --color-secondary-100: var(--secondary-100);
+  --color-secondary-200: var(--secondary-200);
+  --color-secondary-300: var(--secondary-300);
+  --color-secondary-400: var(--secondary-400);
+  --color-secondary-500: var(--secondary-500);
+  --color-secondary-600: var(--secondary-600);
+  --color-secondary-700: var(--secondary-700);
+  --color-secondary-800: var(--secondary-800);
+
+  --color-secondary-foreground: var(--secondary-foreground);
+
+
+  
+
 }
 
 body {
