--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,17 +4,20 @@
   --background: hsl(175, 22%, 10%);
   --foreground: hsl(168, 3%, 63%);
 
-  --primary-100: hsl(176, 56%, 92%);
-  --primary-200: hsl(176, 56%, 83%);
-  --primary-300: hsl(176, 56%, 73%);
-  --primary-400: hsl(176, 56%, 64%);
-  --primary-500: hsl(176, 56%, 55%);
-  --primary-600: hsl(176, 56%, 45%);
-  --primary-700: hsl(176, 56%, 35%);
-  --primary-800: hsl(176, 56%, 25%);
-  --primary-foreground: hsl(175, 32%, 15%);
- 
+  --primary-50: #f1fcfa;
+  --primary-100: #d0f7f1;
+  --primary-200: #a0efe4;
+  --primary-300: #69dfd4;
+  --primary-400: #4bccc3;
+  --primary-500: #21aba4;
+  --primary-600: #178a85;
+  --primary-700: #176e6c;
+  --primary-800: #175858;
+  --primary-900: #184949;
+  --primary-950: #072b2c;
   
+  --primary-foreground: hsl(175, 32%, 15%);
+     
   --secondary-100: hsl(177, 21%, 80%);
   --secondary-200: hsl(177, 21%, 65%);
   --secondary-300: hsl(177, 21%, 51%);
@@ -23,12 +26,12 @@
   --secondary-600: hsl(177, 21%, 21%); 
   --secondary-700: hsl(177, 21%, 16%);
   --secondary-800: hsl(177, 21%, 10%);
-  --secondary-foreground: hsl(0, 0%, 100%);
+  --secondary-foreground: hsl(0, 0%, 100%); 
+ 
+  --secondary-foreground: #212121; 
 }
 
-.dark {
-  
-}
+.dark {}
 
 
 
@@ -40,6 +43,7 @@
 }
 
 @theme {
+  --color-primary-50: var(--primary-50);
   --color-primary-100: var(--primary-100);
   --color-primary-200: var(--primary-200);
   --color-primary-300: var(--primary-300);
@@ -48,8 +52,10 @@
   --color-primary-600: var(--primary-600);
   --color-primary-700: var(--primary-700);
   --color-primary-800: var(--primary-800);
+  --color-primary-900: var(--primary-900);
+  --color-primary-950: var(--primary-950);
 
-  --color-primary-foreground: var(--primary-foreground); 
+  --color-primary-foreground: var(--primary-foreground);
 
   --color-secondary-100: var(--secondary-100);
   --color-secondary-200: var(--secondary-200);
@@ -61,9 +67,6 @@
   --color-secondary-800: var(--secondary-800);
 
   --color-secondary-foreground: var(--secondary-foreground);
-
-
-  
 
 }
 
