feat: update dependencies and add Zustand for state management
- Added `react-hook-form` and `zustand` to manage form state and global user role state.
- Refactored user service functions to return structured error messages.
- Implemented `UserRoleSyncer` component to sync user roles with Zustand store.
- Created new API route for fetching user roles.
- Updated course creation form to handle image uploads and display success/failure messages.
- Added error handling and logging in various services and components.
- Created new placeholder  pages for contact, dashboard, instructors, and courses.
- Removed unused `RegisterTeacher` component and `ROLE` utility.
- Updated global styles and Navbar for better UI consistency.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
   --primary-700: #176e6c;
   --primary-800: #175858;
   --primary-900: #184949;
-  --primary-950: #072b2c;
+  --primary-950: #1a2e2c;
   
   --primary-foreground: hsl(175, 32%, 15%);
      
@@ -28,7 +28,6 @@
   --secondary-800: hsl(177, 21%, 10%);
   --secondary-foreground: hsl(0, 0%, 100%); 
  
-  --secondary-foreground: #212121; 
 }
 
 .dark {}
