--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,30 +4,45 @@
   --background: hsl(175, 22%, 10%);
   --foreground: hsl(168, 3%, 63%);
 
-  --primary-50: #f1fcfa;
-  --primary-100: #d0f7f1;
-  --primary-200: #a0efe4;
-  --primary-300: #69dfd4;
-  --primary-400: #4bccc3;
-  --primary-500: #21aba4;
-  --primary-600: #178a85;
-  --primary-700: #176e6c;
-  --primary-800: #175858;
-  --primary-900: #184949;
-  --primary-950: #1a2e2c;
-  
+  /* --primary-50: hsl(174, 10%, 60%);
+  --primary-100: hsl(175, 20%, 55%);
+  --primary-200: hsl(174, 30%, 50%);
+  --primary-300: hsl(174, 40%, 45%);
+  --primary-400: hsl(174, 50%, 40%);
+  --primary-500: hsl(174, 60%, 35%);
+  --primary-600: hsl(174, 70%, 30%);
+  --primary-700: hsl(174, 80%, 25%);
+  --primary-800: hsl(174, 90%, 20%);
+  --primary-900: hsl(174, 100%, 15%);
+  --primary-950: hsl(174, 100%, 10%); */
+  --primary-50: #f5f8f8;
+  --primary-100: #dcebe7;
+  --primary-200: #b9d6cd;
+  --primary-300: #8fb9af;
+  --primary-400: #679a90;
+  --primary-500: #4d7f76;
+  --primary-600: #3c655d;
+  --primary-700: #33524d;
+  --primary-800: #2c4340;
+  --primary-900: #283937;
+  --primary-950: #1a2c2a;
+
+
+  --primary-foreground-dark: hsl(175, 50%, 31%);
   --primary-foreground: hsl(175, 32%, 15%);
-     
+  --primary-foreground-light: hsl(177, 21%, 65%);
+
   --secondary-100: hsl(177, 21%, 80%);
   --secondary-200: hsl(177, 21%, 65%);
   --secondary-300: hsl(177, 21%, 51%);
   --secondary-400: hsl(177, 21%, 39%);
   --secondary-500: hsl(177, 21%, 29%);
-  --secondary-600: hsl(177, 21%, 21%); 
+  --secondary-600: hsl(177, 21%, 21%);
   --secondary-700: hsl(177, 21%, 16%);
   --secondary-800: hsl(177, 21%, 10%);
-  --secondary-foreground: hsl(0, 0%, 100%); 
- 
+  --secondary-foreground: hsl(0, 0%, 95%);
+  --secondary-foreground-dark: hsl(0, 0%, 70%);
+
 }
 
 .dark {}
@@ -55,6 +70,8 @@
   --color-primary-950: var(--primary-950);
 
   --color-primary-foreground: var(--primary-foreground);
+  --color-primary-foreground-dark: var(--primary-foreground-dark);
+  --color-primary-foreground-light: var(--primary-foreground-light);
 
   --color-secondary-100: var(--secondary-100);
   --color-secondary-200: var(--secondary-200);
@@ -66,6 +83,7 @@
   --color-secondary-800: var(--secondary-800);
 
   --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary-foreground-dark: var(--secondary-foreground-dark);
 
 }
 
